# community-robot-lib

./: WORKSPACE  build.sh  go.mod  go.sum
config/: BUILD.bazel  config_agent.go  mq.go
deploy-plugin/: deployment.yaml  service.yaml
giteeclient/: client.go  interface.go  util.go
githubclient/: utils.go
gitlabclient/: client.go  gitlab_test.go  interface.go  utils.go  webhooks.go
kafka/: default.go  event.go  group.go  kafka.go
mq/: BUILD.bazel  config.go  kafka.go  kafka_test.go  mq.go  options.go
new-plugin/: gen_plugin_yaml_templete.sh
options/: github.go  gitlab.go
plugin/: BUILD.bazel  dispatcher.go  handlers.go  plugin.go
python_logs/: log.conf  log_utils.py  logging_demo.py  requirements.txt  test.py
robot-gitee-framework-python/: converter.py  dispatcher.py  handlers.py  setup.py  test.py  test_api.py
robot-gitee-framework-python-old/: gitee_robot.py  requirements.txt  test.py  test_api.py
robot-gitee-framework-python-old/conf/: conf.yaml
robot-gitee-framework-python-old/gitee_api/: gitee_api.py
robot-gitee-framework-python-old/utils/: parse_utils.py
robot-gitee-framework-python/handler/: event_handler.py
robot-gitee-framework-python/models/: hook_event_models.py  hook_event_types.py  model_issue.py  model_label.py  model_milestone.py  model_program_basic.py  model_user_basic.py  models.py
robot-gitee-framework-python/utils/: parse_utils.py
robot-gitlab-framework/: dispatcher.go  handlers.go  service.go
robot-gitlab-template/: main.go  robot.go
tools/: new_robot.sh
utils/: util.go
(+1 files in other folders)
