load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "codec.go",
        "kafka.go",
        "mq.go",
        "options.go",
    ],
    importpath = "github.com/opensourceways/community-robot-lib/mq",
    visibility = ["//visibility:public"],
    deps = [
        "//utils:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_shopify_sarama//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["kafka_test.go"],
    embed = [":go_default_library"],
)
